<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartFragment"
    android:orientation="vertical"
    android:theme="@style/Base.Theme.AppCompat"
    android:id="@+id/startFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_data"
        android:id="@+id/placeTextView"
        android:textSize="30sp"
        android:textColor="#1A237E" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:id="@+id/textView"
        android:textSize="15sp"
        android:textColor="#1A237E"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:layout_below="@+id/placeTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailRealFeel"
        android:id="@+id/textView2"
        android:layout_alignParentStart="true"
        android:textColor="#1A237E"
        android:textSize="15sp"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailCloudiness"
        android:id="@+id/textView3"
        android:layout_alignParentStart="true"
        android:textColor="#1A237E"
        android:textSize="15sp"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailPrecipitation"
        android:id="@+id/textView4"
        android:layout_alignParentStart="true"
        android:textColor="#1A237E"
        android:textSize="15sp"
        android:paddingRight="10sp"
        android:paddingLeft="10sp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailWind"
        android:id="@+id/textView5"
        android:layout_alignParentStart="true"
        android:textSize="15sp"
        android:textColor="#1A237E"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailPressure"
        android:id="@+id/textView6"
        android:layout_alignParentStart="true"
        android:textColor="#1A237E"
        android:textSize="15sp"
        android:paddingRight="10sp"
        android:paddingLeft="10sp"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailWetness"
        android:id="@+id/textView7"
        android:layout_alignParentStart="true"
        android:textColor="#1A237E"
        android:textSize="15sp"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/temperatureValue"
        android:textSize="15sp"
        android:textColor="#1A237E"
        android:paddingRight="5sp"
        android:paddingLeft="5sp"
        android:layout_below="@+id/placeTextView"
        android:layout_alignLeft="@+id/realFeelValue"
        android:layout_alignStart="@+id/realFeelValue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/realFeelValue"
        android:textColor="#1A237E"
        android:textSize="15sp"
        android:paddingLeft="5sp"
        android:paddingRight="5sp"
        android:layout_below="@+id/temperatureValue"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="true"
        android:text="xxx" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cloudinessValue"
        android:textColor="#1A237E"
        android:textSize="15sp"
        android:paddingRight="5sp"
        android:paddingLeft="5sp"
        android:layout_below="@+id/realFeelValue"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/precipitationValue"
        android:textColor="#1A237E"
        android:textSize="15sp"
        android:paddingLeft="5sp"
        android:paddingRight="5sp"
        android:layout_below="@+id/cloudinessValue"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/windValue"
        android:textSize="15sp"
        android:textColor="#1A237E"
        android:paddingLeft="5sp"
        android:paddingRight="5sp"
        android:layout_below="@+id/precipitationValue"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pressureValue"
        android:textColor="#1A237E"
        android:textSize="15sp"
        android:paddingLeft="5sp"
        android:paddingRight="5sp"
        android:layout_below="@+id/windValue"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wetnessValue"
        android:textColor="#1A237E"
        android:textSize="15sp"
        android:paddingRight="5sp"
        android:paddingLeft="5sp"
        android:layout_below="@+id/pressureValue"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="true" />


</RelativeLayout>
