<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:theme="@style/Base.Theme.AppCompat">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detailTitle"
        android:id="@+id/detaileTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="#1A237E"
        android:paddingLeft="20sp"
        android:paddingRight="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detailWhen"
        android:layout_below="@+id/detaileTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#1A237E"
        android:textSize="20sp"
        android:paddingBottom="20sp"
        android:paddingLeft="20sp"
        android:paddingRight="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:id="@+id/detailTemperature"
        android:layout_below="@+id/detailWhen"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:textColor="#1A237E"
        android:paddingLeft="10sp"
        android:paddingRight="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailRealFeel"
        android:id="@+id/detailRealFeel"
        android:layout_below="@+id/detailTemperature"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#1A237E"
        android:textSize="20sp"
        android:paddingLeft="10sp"
        android:paddingRight="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailCloudiness"
        android:id="@+id/detailCloudiness"
        android:layout_below="@+id/detailRealFeel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#1A237E"
        android:textSize="20sp"
        android:paddingLeft="10sp"
        android:paddingRight="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailPrecipitation"
        android:id="@+id/detailPrecipitation"
        android:layout_below="@+id/detailCloudiness"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#1A237E"
        android:textSize="20sp"
        android:paddingRight="10sp"
        android:paddingLeft="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailWind"
        android:id="@+id/detailWind"
        android:layout_below="@+id/detailPrecipitation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:textColor="#1A237E"
        android:paddingLeft="10sp"
        android:paddingRight="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailPressure"
        android:id="@+id/detailPressure"
        android:layout_below="@+id/detailWind"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#1A237E"
        android:textSize="20sp"
        android:paddingRight="10sp"
        android:paddingLeft="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailWetness"
        android:id="@+id/detailWetness"
        android:layout_below="@+id/detailPressure"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#1A237E"
        android:textSize="20sp"
        android:paddingLeft="10sp"
        android:paddingRight="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detailTemperatureValue"
        android:textSize="20sp"
        android:textColor="#1A237E"
        android:layout_alignTop="@+id/detailTemperature"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingRight="5sp"
        android:paddingLeft="5sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detailRealFeelValue"
        android:textColor="#1A237E"
        android:textSize="20sp"
        android:layout_alignTop="@+id/detailRealFeel"
        android:layout_alignRight="@+id/detailTemperatureValue"
        android:layout_alignEnd="@+id/detailTemperatureValue"
        android:paddingLeft="5sp"
        android:paddingRight="5sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detailCloudinessValue"
        android:textColor="#1A237E"
        android:textSize="20sp"
        android:layout_alignTop="@+id/detailCloudiness"
        android:layout_alignRight="@+id/detailRealFeelValue"
        android:layout_alignEnd="@+id/detailRealFeelValue"
        android:paddingRight="5sp"
        android:paddingLeft="5sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detailPrecipitationValue"
        android:textColor="#1A237E"
        android:textSize="20sp"
        android:layout_alignTop="@+id/detailPrecipitation"
        android:layout_alignRight="@+id/detailCloudinessValue"
        android:layout_alignEnd="@+id/detailCloudinessValue"
        android:paddingLeft="5sp"
        android:paddingRight="5sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detailWindValue"
        android:textSize="20sp"
        android:textColor="#1A237E"
        android:layout_alignTop="@+id/detailWind"
        android:layout_alignRight="@+id/detailPrecipitationValue"
        android:layout_alignEnd="@+id/detailPrecipitationValue"
        android:paddingLeft="5sp"
        android:paddingRight="5sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detailPressureValue"
        android:textColor="#1A237E"
        android:textSize="20sp"
        android:layout_alignTop="@+id/detailPressure"
        android:layout_alignRight="@+id/detailWindValue"
        android:layout_alignEnd="@+id/detailWindValue"
        android:paddingLeft="5sp"
        android:paddingRight="5sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detailWetnessValue"
        android:textColor="#1A237E"
        android:textSize="20sp"
        android:layout_alignTop="@+id/detailWetness"
        android:layout_alignRight="@+id/detailPressureValue"
        android:layout_alignEnd="@+id/detailPressureValue"
        android:paddingRight="5sp"
        android:paddingLeft="5sp" />

</RelativeLayout>